<resources>
    <string name="app_name">ToDo</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="item_name">Name</string>
    <string name="item_desc">Description</string>
    <string name="item_done">Complete</string>
    <string name="item_remove">Remove</string>
    <string name="item_edit">Edit</string>
    <string name="edit_item_enable_datetimes">Set start and end date</string>
    <string name="edit_item_enable_gcalsync">Enable Google Calendar Sync</string>
    <string name="item_fail_to_save">Failed to save - task name cannot be empty</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to intent passing -->
    <string name="intent_idx">todo_item_index</string>
    <string name="intent_create_item">todo_create_new_item</string>

    <!-- Strings related to Settings -->
    <string name="pref_general_settings_title">General</string>
    <string name="pref_gcal_settings_title">Google Calendar</string>

    <!-- General settings -->
    <string name="pref_title_light_theme">Enable Light Theme</string>
    <string name="pref_description_light_theme">Turns on the light theme for the app</string>

    <string name="pref_title_list_name">List Name</string>
    <string name="pref_default_list_name">ToDo</string>

    <string name="pref_title_reset">Reset Application</string>

    <!-- GCal settings -->
    <string name="pref_enable_gcal">Enable Google Calendar Sync</string>
    <string name="pref_calendar_name">Google Calendar Name</string>
    <string name="pref_enable_gcal_summary">Sync the last week of Google calendar events with this app and all future ToDo items</string>
    <string name="pref_calendar_name_summary">Google calendar name to sync from that is associated with the logged in account</string>
    <string name="pref_default_calendar_name">primary</string>
    <!--<string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="reset_app_toast">Reset App</string>
    <string name="cd_checkmark">Task complete</string>
    <string name="cd_additem">Add item</string>
    <string name="cd_settings">Settings</string>
    <string name="subtask_lbl">Subtasks</string>

</resources>
