<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_general_settings_title"
        android:key="general_settings">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_list_name"
            android:inputType="textCapWords"
            android:key="list_name_pref"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_list_name" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="light_theme_pref"
            android:summary="@string/pref_description_light_theme"
            android:title="@string/pref_title_light_theme" />

        <PreferenceScreen
            android:defaultValue="-1"
            android:key="reset_pref"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_reset" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_gcal_settings_title"
        android:key="gcal_settings">
        <SwitchPreference
            android:key="pref_enable_gcal"
            android:summary="@string/pref_enable_gcal_summary"
            android:title="@string/pref_enable_gcal"
            android:defaultValue="false" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_calendar_name"
            android:inputType="text"
            android:key="pref_calendar_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:dependency="pref_enable_gcal"
            android:title="@string/pref_calendar_name"
            android:summary="@string/pref_calendar_name_summary"
            android:singleLine="true" />

    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
