<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_editdetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_editdetails"
    tools:context="me.kainoseto.todo.EditItemDetailActivity"
    android:theme="@android:style/Theme.Material"
    android:weightSum="1"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_name"
        android:layout_weight="0.04"
        android:hint="@string/item_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_desc"
        android:layout_weight="0.03"
        android:hint="@string/item_desc"
        android:gravity="bottom" />

    <Switch
        android:text="@string/item_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_done"
        android:layout_weight="0.08"
        android:textSize="18sp" />

<!--TODO: Add border between top and bottom of RecyclerView and RecyclerView elements-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_edit_subtasks"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:id="@+id/switch_subtask_done"
            android:text="Complete"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:id="@+id/edit_subtask_name"
            android:hint="Name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:id="@+id/btn_add_subtask"/>
    </LinearLayout>

</LinearLayout>